--- a/wcagem-tool/wcag-em-report-tool/app/views/start.html
+++ b/wcagem-tool/wcag-em-report-tool/app/views/start.html
@@ -46,6 +46,8 @@
     </li>
     <li>{{ 'START.TIPS_LI3' | translate }}</li>
     <li>{{ 'START.TIPS_LI4' | translate }}</li>
+    <li>{{ 'START.TIPS_LI5' | translate }}</li>
+    <li>{{ 'START.TIPS_LI6' | translate }}</li>
 </ul> </div>
 </main>
 
