--- a/wcagem-tool/wcag-em-report-tool/app/views/evaluation/report.html
+++ b/wcagem-tool/wcag-em-report-tool/app/views/evaluation/report.html
@@ -48,7 +48,7 @@
     <div class="col-sm-12">
       <info-field button="{{'COMMON.BTN_CLOSE_INFO' | translate}}" class="info-float"
       ref="inf_commissioner" exitto="commissioner">
-        <p>{{ 'REPORT.INF_COMMISSIONER' | translate }}</p>
+        <p ng-bind-html="'REPORT.INF_COMMISSIONER' | translate"></p>
     </info-field></div>
   </div>
 
@@ -69,7 +69,7 @@
     <div class="col-sm-12">
       <info-field button="{{'COMMON.BTN_CLOSE_INFO' | translate}}"
       ref="inf_creator" exitto="creator">
-        <p>{{ 'REPORT.INF_CREATOR' | translate }}</p>
+        <p ng-bind-html="'REPORT.INF_CREATOR' | translate"></p>
     </info-field></div>
   </div>
 
