--- a/wcagemtool/app/views/navigation.html
+++ b/wcagemtool/app/views/navigation.html
@@ -3,14 +3,14 @@
     <div class="branding">
       <div class="nav navbar-nav navbar-right">
         <span class="pae"><a href="https://administracionelectronica.gob.es/"
-            title="Punto de Acceso General administracion.gob.es (Abre en nueva ventana)">
+            title="Portal de Administración Electrónica (Abre en nueva ventana)">
             <img alt="Portal de Administración Electrónica" width="73" height="50"
               src="images/logo-pae-cabecera-accesibilidad.png">
           </a>
         </span>
         <span class="pae"><a
-            href="https://administracionelectronica.gob.es/comunidades/verPestanaGeneral.htm?idComunidad=21"
-            title="Comunidad de Accesibilidad - Punto de Acceso General administracion.gob.es (Abre en nueva ventana)">
+            href="https://administracionelectronica.gob.es/comunidades/accesibilidad"
+            title="Comunidad de Accesibilidad - Portal de Administración Electrónica (Abre en nueva ventana)">
             <img alt="Comunidad accesibilidad" width="120" height="50" src="images/logo-oaw-cabecera-accesibilidad.png">
           </a>
         </span>
