Update WCAG descriptions
Update UI texts

--- a/wcagem-tool/wcag-em-report-tool/app/views/evaluation/scope.html
+++ b/wcagem-tool/wcag-em-report-tool/app/views/evaluation/scope.html
@@ -40,7 +40,7 @@
         <li>{{ 'SCOPE.INF_SITE_SCOPE_LI1' | translate }}</li>
         <li>{{ 'SCOPE.INF_SITE_SCOPE_LI2' | translate }}</li>
       </ul>
-      <p ng-bind-html="'COMMON.MORE_INFO' | translate: {
+      <p ng-bind-html="'COMMON.MORE_INFO_1' | translate: {
         url: 'http://www.w3.org/TR/WCAG-EM/#step1a',
         name: translate('SCOPE.INF_SITE_SCOPE_1')
       }"></p>
@@ -133,7 +133,7 @@
         <li>{{ 'SCOPE.INF_EXTRA_REQUIREMENTS_LI1' | translate }}</li>
         <li>{{ 'SCOPE.INF_EXTRA_REQUIREMENTS_LI2' | translate }}</li>
       </ul>
-      <p ng-bind-html="'COMMON.MORE_INFO' | translate: {
+      <p ng-bind-html="'COMMON.MORE_INFO_2' | translate: {
         url: 'http://www.w3.org/TR/WCAG-EM/#step1d',
         name: translate('SCOPE.INF_EXTRA_REQUIREMENTS_1')
       }"></p>
