WCAG EM UX Changes

--- a/wcagemtool/app/views/directives/evaluate/inputPages.html
+++ b/wcagemtool/app/views/directives/evaluate/inputPages.html
@@ -46,6 +46,9 @@ ng-init="col0 = 'visible-xs col-xs-12';
       <button class="btn glyphicon glyphicon-remove-sign" ng-click="removePage($index, $event)">
         <span class="hint">{{ 'SAMPLE.BTN_REMOVE_PAGE' | translate}}</span>
       </button>
+      <button class="btn glyphicon glyphicon-retweet" ng-click="updatePage($index, $event)">
+        <span class="hint">{{ 'SAMPLE.BTN_REMOVE_PAGE' | translate}}</span>
+      </button>
     </div>
   </fieldset>
 
