--- a/wcagemtool/app/views/directives/successCriterion.html
+++ b/wcagemtool/app/views/directives/successCriterion.html
@@ -15,7 +15,9 @@ ng-class="getClassName(assert.result.outcome)">
 
     </div><div class="col-xs-12 crit-text collapsed">
       <p>{{spec.text}}<p>
+        
       <div ng-repeat="detail in spec.details">
+
         <ul ng-if="detail.type === 'ulist'">
           <li ng-repeat="item in detail.items">
             <strong ng-if="item.handle">
@@ -32,8 +34,8 @@ ng-class="getClassName(assert.result.outcome)">
             {{ item.text}}
           </li>
         </ol>
-        <p ng-if="details.type === 'note'">
-          <em>{{ "AUDIT.NOTE" | translate }}:</em> {{ details.text}}
+        <p ng-if="detail.type === 'note'">
+          <em>{{ detail.handle }}</em> <span ng-bind-html='detail.text'></span>
         </p>
       </div>
       <p>
