--- a/wcagemtool/app/views/evaluation/report.html
+++ b/wcagemtool/app/views/evaluation/report.html
@@ -91,6 +91,20 @@
       </div>
     </div>
 
+
+    <div class="alert alert-success" ng-if="allVerifications()">
+      <p ng-bind-html="'REPORT.REPORT_FINISHED'|translate"></p>
+    </div>
+    
+    <div class="alert alert-danger" ng-if="!allVerifications()">
+      <p ng-bind-html="'REPORT.REPORT_UNFINISHED'|translate"></p>
+      <ul>
+        <li>{{'REPORT.REPORT_UNFINISHED_INFO' | translate}}</li>
+      </ul>
+    </div>
+
+
+
     <div class="form-group">
       <div class="col-sm-12">
         <label for="summary">
