--- a/wcagemtool/app/views/evaluation/report.html
+++ b/wcagemtool/app/views/evaluation/report.html
@@ -92,7 +92,7 @@
     </div>
 
 
-    <div class="alert alert-success" ng-if="allVerifications()">
+    <!-- <div class="alert alert-success" ng-if="allVerifications()">
       <p ng-bind-html="'REPORT.REPORT_FINISHED'|translate"></p>
     </div>
     
@@ -101,7 +101,7 @@
       <ul>
         <li>{{'REPORT.REPORT_UNFINISHED_INFO' | translate}}</li>
       </ul>
-    </div>
+    </div> -->
 
 
 
