--- a/wcagemtool/app/styles/main.scss
+++ b/wcagemtool/app/styles/main.scss
@@ -296,6 +296,17 @@ body .wert-head {
   height: 24px;
 }
 
+.invalid-feedback {
+  width: 100%;
+  margin-top: .25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
+
+.invalid {
+  border: 1px solid #dc3545 !important;
+}
+
 
 .glyphicon.spinning {
   animation: rotate 1s infinite linear;
