--- a/wcagemtool/app/views/directives/criterion/criterionBody.html
+++ b/wcagemtool/app/views/directives/criterion/criterionBody.html
@@ -2,13 +2,10 @@
 
   <hr ng-if="multiPageAsserts.length > 0" />
 
-  <page-results ng-if="singlePageAsserts.length > 0"
-  class="panel-body assert-indent appear"
-  asserts="singlePageAsserts"
-  value="criterion" options="opt"></page-results>
+  <page-results ng-if="singlePageAsserts.length > 0" class="panel-body assert-indent appear" asserts="singlePageAsserts"
+    value="criterion" options="opt"></page-results>
 
-  <div ng-if="singlePageAsserts.length === 0 && opt.editable"
-  class="panel-body assert-indent appear no-selection">
+  <div ng-if="singlePageAsserts.length === 0 && opt.editable" class="panel-body assert-indent appear no-selection alert alert-info">
     {{ 'AUDIT.NO_PAGE_SELECTED' | translate}}
   </div>
 
