Seeds less treshold table imporvments
Former-commit-id: b7df6f86d2b02c2b95cf42cd3ef3754d046e0ba9

--- a/portal/src/main/webapp/styles/estilo.css
+++ b/portal/src/main/webapp/styles/estilo.css
@@ -1348,3 +1348,20 @@ to {
 .seedImportErrorList > li+li::before{
 	    content: "" !important;
 }
+
+#filterResultsThreshold{
+    padding: 5px;
+    width: 100%;
+    float: left;
+    clear: both;
+    margin-bottom: 10px;
+}
+
+#filterResultsThreshold .form-group {
+	display: inline-block;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+#filterResultsThreshold input {
+	margin-right:15px;
+}
